force-app/main/default/objects/Apttus_XApps__UserXAuthorApp__c/Apttus_XApps__UserXAuthorApp__c.object-meta.xml
<CustomObject>
    <description>Assignment of X-Author for Excel App to user or profile</description>
    <label>App Assignment</label>
    <nameField>
        <label>Assignment ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>