force-app/main/default/objects/Apttus_XApps__UserXAuthorApp__c/fields/Apttus_XApps__ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_XApps__ApplicationId__c</fullName>
    <description>X-Author Application ID</description>
    <label>Application</label>
    <referenceTo>Apttus_XApps__Application__c</referenceTo>
    <relationshipName>UserXAuthorApps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>