force-app/main/default/objects/Apttus_XApps__UserXAuthorApp__c/fields/Apttus_XApps__ProfileId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_XApps__ProfileId__c</fullName>
    <description>ID of the user profile</description>
    <inlineHelpText>ID of the user profile</inlineHelpText>
    <label>Profile</label>
    <length>25</length>
    <type>Text</type>
</CustomField>