force-app/main/default/objects/Apttus_XApps__UserXAuthorApp__c/fields/Apttus_XApps__UserId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_XApps__UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who can be assigned to a X-Author Excel app</description>
    <inlineHelpText>User who can be assigned to a X-Author Excel app</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserXAuthorApps</relationshipName>
    <type>Lookup</type>
</CustomField>